--- a/buyer.html
+++ b/buyer.html
@@ -5,6 +5,7 @@
 <title>PetalRush Buyer</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script defer src="buyer.js"></script>
 
 <style>
 body{
