--- a/buyer.html
+++ b/buyer.html
@@ -6,7 +6,6 @@
 <title>PetalRush Buyer</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script defer src="js/buyer.js"></script>
 
 <style>
 
@@ -329,5 +328,8 @@ Place Order
 
 </div>
 
+<script src="js/buyer.js"></script>
 </body>
 </html>
+
+
