--- a/buyer.html
+++ b/buyer.html
@@ -9,9 +9,7 @@
 
 <style>
 
-/* =========================
-   GLOBAL
-========================= */
+/* GLOBAL */
 
 body{
 margin:0;
@@ -27,9 +25,7 @@ min-height:100vh;
 padding-bottom:80px;
 }
 
-/* =========================
-   HEADER
-========================= */
+/* HEADER */
 
 .header{
 background:#111;
@@ -41,9 +37,7 @@ text-align:center;
 height:50px;
 }
 
-/* =========================
-   FILTER BAR
-========================= */
+/* FILTER */
 
 .filter-bar{
 padding:10px;
@@ -52,44 +46,37 @@ display:flex;
 gap:10px;
 position:sticky;
 top:0;
-z-index:10;
 }
 
-.search,input,select{
-flex:1;
+input,select{
 padding:10px;
 border-radius:8px;
 border:none;
 background:#222;
 color:white;
+width:100%;
+margin-top:5px;
 }
 
-/* =========================
-   PRODUCTS GRID
-========================= */
+/* GRID */
 
 .products{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:12px;
-padding:12px;
+gap:10px;
+padding:10px;
 }
 
 .card{
 background:#171a21;
 padding:10px;
-border-radius:12px;
+border-radius:10px;
 cursor:pointer;
-transition:.2s;
-}
-
-.card:hover{
-transform:scale(1.03);
 }
 
 .card img{
 width:100%;
-height:130px;
+height:120px;
 object-fit:cover;
 border-radius:8px;
 }
@@ -99,18 +86,14 @@ color:#ff4081;
 font-weight:bold;
 }
 
-/* =========================
-   SECTIONS
-========================= */
+/* SECTIONS */
 
 .section{
 display:none;
-padding:12px;
+padding:10px;
 }
 
-/* =========================
-   BUTTONS
-========================= */
+/* BUTTON */
 
 .btn{
 background:#ff4081;
@@ -121,53 +104,55 @@ border-radius:8px;
 color:white;
 margin-top:10px;
 cursor:pointer;
-font-weight:bold;
 }
 
-.btn:hover{
-opacity:.9;
-}
-
-/* =========================
-   CART ITEMS
-========================= */
+/* CART ITEM */
 
 .cart-item{
 background:#171a21;
-padding:12px;
+padding:10px;
 margin-top:10px;
 border-radius:8px;
 display:flex;
 justify-content:space-between;
-align-items:center;
 }
 
-/* =========================
-   PROFILE
-========================= */
+/* TOTAL BOX */
+
+.total-box{
+background:#171a21;
+padding:10px;
+margin-top:10px;
+border-radius:10px;
+}
+
+/* PROFILE */
 
 .avatar{
 width:100px;
 height:100px;
 border-radius:50%;
-object-fit:cover;
-margin-bottom:10px;
 }
 
-/* =========================
-   TOTAL BOX
-========================= */
+/* ADDRESS */
 
-.total-box{
-margin-top:15px;
+.address-card{
 background:#171a21;
-padding:15px;
+padding:10px;
+margin-top:10px;
+border-radius:8px;
+}
+
+/* ORDER */
+
+.order-card{
+background:#171a21;
+padding:12px;
+margin-top:12px;
 border-radius:10px;
 }
 
-/* =========================
-   BOTTOM NAV
-========================= */
+/* NAV */
 
 .bottom{
 position:fixed;
@@ -176,7 +161,6 @@ width:100%;
 max-width:500px;
 display:flex;
 background:#111;
-border-top:1px solid #222;
 }
 
 .bottom div{
@@ -186,96 +170,25 @@ padding:15px;
 cursor:pointer;
 }
 
-.bottom div:hover{
-background:#222;
-}
-
 </style>
 
 </head>
-
 <body>
 
 <div class="container">
 
-<!-- HEADER -->
 <div class="header">
 <img src="Headerlogo.png" class="logo">
 </div>
 
-<!-- FILTER -->
 <div id="filterSection" class="filter-bar">
-
-<input id="search"
-placeholder="Search flowers"
-oninput="searchProducts()">
-
-<select onchange="applyFilter(this.value)">
-<option value="new">Newest</option>
-<option value="low">Price Low → High</option>
-<option value="high">Price High → Low</option>
-</select>
-
+<input id="search" placeholder="Search flowers">
 </div>
 
-<!-- HOME -->
 <div id="home" class="products"></div>
 
-<!-- DETAIL -->
 <div id="detail" class="section"></div>
 
-<!-- PROFILE -->
-<div id="profile" class="section">
-
-<h2>My Profile</h2>
-
-<center>
-<img id="avatar"
-class="avatar"
-src="default-avatar.png">
-
-<input type="file"
-onchange="uploadAvatar(event)">
-</center>
-
-<input id="nameInput"
-placeholder="Enter your name">
-
-<input id="phoneInput"
-placeholder="Enter phone">
-
-<button class="btn"
-onclick="saveProfile()">
-Save Profile
-</button>
-
-<div id="profileInfo"></div>
-
-<h3>Addresses</h3>
-
-<input id="addressInput"
-placeholder="Enter address">
-
-<button class="btn"
-onclick="saveAddress()">
-Save Address
-</button>
-
-<div id="addressList"></div>
-
-<h3>My Orders</h3>
-
-<div id="ordersList"></div>
-
-<button class="btn"
-style="background:#333"
-onclick="logout()">
-Logout
-</button>
-
-</div>
-
-<!-- CART -->
 <div id="cart" class="section">
 
 <h2>Cart</h2>
@@ -284,52 +197,74 @@ Logout
 
 <div class="total-box">
 
-<div>Subtotal: ₹<span id="subtotal">0</span></div>
-
-<div>Delivery: ₹<span id="delivery">0</span></div>
-
-<div>GST (5%): ₹<span id="gst">0</span></div>
-
-<div>Discount: ₹<span id="discount">0</span></div>
+<div>Subtotal ₹<span id="subtotal">0</span></div>
+<div>Delivery ₹<span id="delivery">0</span></div>
+<div>GST ₹<span id="gst">0</span></div>
+<div>Discount ₹<span id="discount">0</span></div>
 
 <hr>
 
-<h3>Total: ₹<span id="grandTotal">0</span></h3>
+<h3>Total ₹<span id="grandTotal">0</span></h3>
 
 </div>
 
 <select id="addressSelect"></select>
 
-<input id="couponInput"
-placeholder="Coupon code">
+<input id="couponInput" placeholder="Coupon">
 
-<button class="btn"
-onclick="applyCoupon()">
-Apply Coupon
-</button>
+<button class="btn" onclick="applyCoupon()">Apply Coupon</button>
 
-<button class="btn"
-onclick="placeOrder()">
-Place Order
-</button>
+<button class="btn" onclick="placeOrder()">Place Order</button>
 
 </div>
 
-<!-- BOTTOM NAV -->
+<div id="profile" class="section">
+
+<h2>Profile</h2>
+
+<center>
+
+<img id="avatar" src="default-avatar.png" class="avatar">
+
+<input type="file" onchange="uploadAvatar(event)">
+
+</center>
+
+<input id="nameInput" placeholder="Name">
+
+<input id="phoneInput" placeholder="Phone">
+
+<button class="btn" onclick="saveProfile()">Save Profile</button>
+
+<h3>Addresses</h3>
+
+<input id="addressInput" placeholder="Address">
+
+<button class="btn" onclick="saveAddress()">Save Address</button>
+
+<div id="addressList"></div>
+
+<h3>My Orders</h3>
+
+<div id="ordersList"></div>
+
+<button class="btn" onclick="logout()">Logout</button>
+
+</div>
+
 <div class="bottom">
 
 <div onclick="showHome()">Home</div>
 
-<div onclick="showProfile()">Profile</div>
-
 <div onclick="showCart()">Cart</div>
+
+<div onclick="showProfile()">Profile</div>
 
 </div>
 
 </div>
 
 <script src="js/buyer.js"></script>
+
 </body>
 </html>
-
-
