--- a/buyer.html
+++ b/buyer.html
@@ -2,15 +2,11 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title>PetalRush Buyer</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-
-/* GLOBAL */
-
 body{
 margin:0;
 background:#0f1115;
@@ -22,10 +18,8 @@ font-family:system-ui;
 max-width:500px;
 margin:auto;
 min-height:100vh;
-padding-bottom:80px;
+padding-bottom:70px;
 }
-
-/* HEADER */
 
 .header{
 background:#111;
@@ -37,8 +31,6 @@ text-align:center;
 height:50px;
 }
 
-/* FILTER */
-
 .filter-bar{
 padding:10px;
 background:#111;
@@ -48,35 +40,40 @@ position:sticky;
 top:0;
 }
 
-input,select{
+.search{
+flex:1;
 padding:10px;
 border-radius:8px;
 border:none;
 background:#222;
 color:white;
-width:100%;
-margin-top:5px;
 }
 
-/* GRID */
+select{
+padding:10px;
+background:#222;
+color:white;
+border:none;
+border-radius:8px;
+}
 
 .products{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:10px;
-padding:10px;
+gap:12px;
+padding:12px;
 }
 
 .card{
 background:#171a21;
 padding:10px;
-border-radius:10px;
+border-radius:12px;
 cursor:pointer;
 }
 
 .card img{
 width:100%;
-height:120px;
+height:130px;
 object-fit:cover;
 border-radius:8px;
 }
@@ -86,14 +83,10 @@ color:#ff4081;
 font-weight:bold;
 }
 
-/* SECTIONS */
-
 .section{
 display:none;
-padding:10px;
+padding:12px;
 }
-
-/* BUTTON */
 
 .btn{
 background:#ff4081;
@@ -105,54 +98,6 @@ color:white;
 margin-top:10px;
 cursor:pointer;
 }
-
-/* CART ITEM */
-
-.cart-item{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-display:flex;
-justify-content:space-between;
-}
-
-/* TOTAL BOX */
-
-.total-box{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:10px;
-}
-
-/* PROFILE */
-
-.avatar{
-width:100px;
-height:100px;
-border-radius:50%;
-}
-
-/* ADDRESS */
-
-.address-card{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-}
-
-/* ORDER */
-
-.order-card{
-background:#171a21;
-padding:12px;
-margin-top:12px;
-border-radius:10px;
-}
-
-/* NAV */
 
 .bottom{
 position:fixed;
@@ -170,9 +115,37 @@ padding:15px;
 cursor:pointer;
 }
 
-</style>
+.avatar{
+width:100px;
+height:100px;
+border-radius:50%;
+}
 
+.cart-item{
+background:#171a21;
+padding:10px;
+margin-top:10px;
+border-radius:8px;
+display:flex;
+justify-content:space-between;
+}
+
+.qty-box{
+display:flex;
+gap:10px;
+margin:10px 0;
+}
+
+.qty-btn{
+background:#333;
+border:none;
+color:white;
+padding:5px 10px;
+cursor:pointer;
+}
+</style>
 </head>
+
 <body>
 
 <div class="container">
@@ -182,73 +155,34 @@ cursor:pointer;
 </div>
 
 <div id="filterSection" class="filter-bar">
-
-<input id="search" oninput="searchProducts()">
-
+<input id="search" class="search" placeholder="Search flowers" oninput="searchProducts()">
 <select onchange="applyFilter(this.value)">
 <option value="new">Newest</option>
 <option value="low">Low → High</option>
 <option value="high">High → Low</option>
 </select>
-
 </div>
 
 <div id="home" class="products"></div>
 
 <div id="detail" class="section"></div>
 
-<div id="cart" class="section">
-
-<h2>Cart</h2>
-
-<div id="cartItems"></div>
-
-<div class="total-box">
-
-<div>Subtotal ₹<span id="subtotal">0</span></div>
-<div>Delivery ₹<span id="delivery">0</span></div>
-<div>GST ₹<span id="gst">0</span></div>
-<div>Discount ₹<span id="discount">0</span></div>
-
-<hr>
-
-<h3>Total ₹<span id="grandTotal">0</span></h3>
-
-</div>
-
-<select id="addressSelect"></select>
-
-<input id="couponInput" placeholder="Coupon">
-
-<button class="btn" onclick="applyCoupon()">Apply Coupon</button>
-
-<button class="btn" onclick="placeOrder()">Place Order</button>
-
-</div>
-
 <div id="profile" class="section">
 
-<h2>Profile</h2>
+<h2>My Profile</h2>
 
 <center>
-
-<img id="avatar" src="default-avatar.png" class="avatar">
-
+<img id="avatar" class="avatar" src="default-avatar.png">
 <input type="file" onchange="uploadAvatar(event)">
-
 </center>
 
-<input id="nameInput" placeholder="Name">
+<div id="profileInfo"></div>
 
-<input id="phoneInput" placeholder="Phone">
+<h3>Delivery Address</h3>
 
-<button class="btn" onclick="saveProfile()">Save Profile</button>
+<input id="addressInput" class="search" placeholder="Enter address">
 
-<h3>Addresses</h3>
-
-<input id="addressInput" placeholder="Address">
-
-<button class="btn" onclick="saveAddress()">Save Address</button>
+<button class="btn" onclick="saveAddress()">Save Address with</button>
 
 <div id="addressList"></div>
 
@@ -256,7 +190,23 @@ cursor:pointer;
 
 <div id="ordersList"></div>
 
-<button class="btn" onclick="logout()">Logout</button>
+<button class="btn" onclick="logout()" style="background:#333">
+Logout
+</button>
+
+</div>
+
+<div id="cart" class="section">
+
+<h2>Cart</h2>
+
+<div id="cartItems"></div>
+
+<h3 id="total">Total ₹0</h3>
+
+<button class="btn" onclick="placeOrder()">
+Place Order
+</button>
 
 </div>
 
@@ -264,15 +214,462 @@ cursor:pointer;
 
 <div onclick="showHome()">Home</div>
 
-<div onclick="showCart()">Cart</div>
-
 <div onclick="showProfile()">Profile</div>
 
-</div>
+<div onclick="showCart()">Cart</div>
 
 </div>
 
-<script src="js/buyer.js"></script>
+</div>
+
+<script>
+
+const supabaseClient = window.supabase.createClient(
+"https://lssjsgfppehhclxqulso.supabase.co",
+"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0"
+);
+
+let user = JSON.parse(localStorage.getItem("user"));
+
+if(!user){
+
+alert("Login required");
+
+location="index.html";
+
+}
+
+let currentProduct=null;
+let currentQty=1;
+
+/* UTIL */
+
+function hideAll(){
+
+document.getElementById("home").style.display="none";
+document.getElementById("detail").style.display="none";
+document.getElementById("profile").style.display="none";
+document.getElementById("cart").style.display="none";
+document.getElementById("filterSection").style.display="none";
+
+}
+
+/* HOME */
+
+async function showHome(){
+
+hideAll();
+
+document.getElementById("home").style.display="grid";
+document.getElementById("filterSection").style.display="flex";
+
+const {data} = await supabaseClient
+.from("products")
+.select("*");
+
+renderProducts(data);
+
+}
+
+function renderProducts(data){
+
+const home=document.getElementById("home");
+
+home.innerHTML="";
+
+data.forEach(p=>{
+
+home.innerHTML+=`
+<div class="card" onclick="showDetail('${p.id}')">
+
+<img src="${p.image_url}">
+
+<div>${p.name}</div>
+
+<div class="price">₹${p.price}</div>
+
+</div>
+`;
+
+});
+
+}
+
+/* DETAIL */
+
+async function showDetail(id){
+
+hideAll();
+
+const detail=document.getElementById("detail");
+
+detail.style.display="block";
+
+const {data}=await supabaseClient
+.from("products")
+.select("*")
+.eq("id",id)
+.single();
+
+currentProduct=data;
+currentQty=1;
+
+detail.innerHTML=`
+
+<img src="${data.image_url}" width="100%">
+
+<h2>${data.name}</h2>
+
+<div class="price">
+₹<span id="price">${data.price}</span>
+</div>
+
+Stock: ${data.quantity}
+
+<div class="qty-box">
+
+<button class="qty-btn" onclick="changeQty(-1)">-</button>
+
+<span id="qty">1</span>
+
+<button class="qty-btn" onclick="changeQty(1)">+</button>
+
+</div>
+
+<button class="btn" onclick="addCart()">Add to Cart</button>
+
+<button class="btn" onclick="showHome()" style="background:#333">
+Back
+</button>
+
+`;
+
+}
+
+/* QTY */
+
+function changeQty(val){
+
+currentQty+=val;
+
+if(currentQty<1) currentQty=1;
+
+if(currentQty>currentProduct.quantity){
+
+alert("Not enough stock");
+
+currentQty=currentProduct.quantity;
+
+}
+
+document.getElementById("qty").innerText=currentQty;
+
+document.getElementById("price").innerText=
+currentProduct.price*currentQty;
+
+}
+
+/* ADD CART */
+
+async function addCart(){
+
+await supabaseClient
+.from("cart")
+.insert({
+
+user_email:user.email,
+product_id:currentProduct.id,
+qty:currentQty
+
+});
+
+alert("Added to cart");
+
+}
+
+/* SHOW CART */
+
+async function showCart(){
+
+hideAll();
+
+document.getElementById("cart").style.display="block";
+
+const {data}=await supabaseClient
+.from("cart")
+.select(`
+qty,
+products(name,price)
+`)
+.eq("user_email",user.email);
+
+const cartItems=document.getElementById("cartItems");
+
+cartItems.innerHTML="";
+
+let total=0;
+
+if(!data || data.length==0){
+
+cartItems.innerHTML="Cart empty";
+
+return;
+
+}
+
+data.forEach(item=>{
+
+const price=item.products.price*item.qty;
+
+total+=price;
+
+cartItems.innerHTML+=`
+
+<div class="cart-item">
+
+<span>
+${item.products.name} x ${item.qty}
+</span>
+
+<span>
+₹${price}
+</span>
+
+</div>
+
+`;
+
+});
+
+document.getElementById("total").innerText="Total ₹"+total;
+
+}
+
+/* PLACE ORDER */
+
+async function placeOrder(){
+
+const {data}=await supabaseClient
+.from("cart")
+.select(`
+qty,
+products(name,price)
+`)
+.eq("user_email",user.email);
+
+if(!data || data.length==0){
+
+alert("Cart empty");
+
+return;
+
+}
+
+for(const item of data){
+
+await supabaseClient
+.from("orders")
+.insert({
+
+user_email:user.email,
+
+flower_name:item.products.name,
+
+price:item.products.price*item.qty,
+
+status:"Placed"
+
+});
+
+}
+
+await supabaseClient
+.from("cart")
+.delete()
+.eq("user_email",user.email);
+
+alert("Order placed");
+
+showProfile();
+
+}
+
+/* PROFILE */
+
+async function showProfile(){
+
+hideAll();
+
+document.getElementById("profile").style.display="block";
+
+const {data}=await supabaseClient
+.from("users")
+.select("*")
+.eq("email",user.email)
+.single();
+
+if(data){
+
+if(data.avatar_url)
+document.getElementById("avatar").src=data.avatar_url;
+
+document.getElementById("profileInfo").innerHTML=
+
+"Name: "+(data.name||"")+"<br>"+
+"Phone: "+(data.phone||"");
+
+}
+
+loadOrders();
+
+loadAddresses();
+
+}
+
+/* ORDERS */
+
+async function loadOrders(){
+
+const {data}=await supabaseClient
+.from("orders")
+.select("*")
+.eq("user_email",user.email);
+
+const div=document.getElementById("ordersList");
+
+div.innerHTML="";
+
+data.forEach(o=>{
+
+div.innerHTML+=`
+
+<div class="cart-item">
+
+<span>${o.flower_name}</span>
+
+<span>₹${o.price}</span>
+
+</div>
+
+`;
+
+});
+
+}
+
+/* ADDRESS */
+
+async function saveAddress(){
+
+navigator.geolocation.getCurrentPosition(async(pos)=>{
+
+let gps=pos.coords.latitude+","+pos.coords.longitude;
+
+let addr=document.getElementById("addressInput").value;
+
+await supabaseClient.from("addresses").insert({
+
+user_email:user.email,
+
+address:addr+" GPS:"+gps
+
+});
+
+loadAddresses();
+
+});
+
+}
+
+async function loadAddresses(){
+
+const {data}=await supabaseClient
+.from("addresses")
+.select("*")
+.eq("user_email",user.email);
+
+const div=document.getElementById("addressList");
+
+div.innerHTML="";
+
+data.forEach(a=>{
+
+div.innerHTML+="<div>"+a.address+"</div>";
+
+});
+
+}
+
+/* AVATAR */
+
+async function uploadAvatar(e){
+
+const file=e.target.files[0];
+
+const name=user.email+".png";
+
+await supabaseClient.storage
+.from("avatars")
+.upload(name,file,{upsert:true});
+
+const url=
+"https://lssjsgfppehhclxqulso.supabase.co/storage/v1/object/public/avatars/"+name;
+
+document.getElementById("avatar").src=url;
+
+await supabaseClient.from("users").upsert({
+
+email:user.email,
+avatar_url:url
+
+});
+
+}
+
+/* LOGOUT */
+
+function logout(){
+
+localStorage.removeItem("user");
+
+location="index.html";
+
+}
+
+/* FILTER + SEARCH */
+
+async function applyFilter(type){
+
+let query=supabaseClient.from("products").select("*");
+
+if(type=="low") query=query.order("price",{ascending:true});
+if(type=="high") query=query.order("price",{ascending:false});
+if(type=="new") query=query.order("created_at",{ascending:false});
+
+const {data}=await query;
+
+renderProducts(data);
+
+}
+
+async function searchProducts(){
+
+let text=document.getElementById("search").value;
+
+const {data}=await supabaseClient
+.from("products")
+.select("*")
+.ilike("name","%"+text+"%");
+
+renderProducts(data);
+
+}
+
+/* START */
+
+showHome();
+
+</script>
 
 </body>
 </html>
