--- a/buyer.html
+++ b/buyer.html
@@ -235,7 +235,7 @@ onclick="placeOrder()">Place Order</button>
 const supabaseClient =
 window.supabase.createClient(
 "https://lssjsgfppehhclxqulso.supabase.co",
-"YOUR_ANON_KEY"
+"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0"
 );
 
 /* USER */
